CoqOfSolidity/test/libsolidity/syntaxTests/errors/require_custom.v
(* Generated by coq-of-solidity *)
Require Import CoqOfSolidity.CoqOfSolidity.

(* Error E *)

(* Contract *)
Module C.
  Definition f (α : list Value.t) : M :=
    match α with
    | [c] =>
      let _ :=
        M.call (|
          M.get_name (| "require" |),
          [
            M.get_name (| "c" |),
            M.call (|
              M.get_name (| "E" |),
              [
                Value.Integer 2,
                Value.Integer 7
              ]
            |)
          ]
        |) in
      Value.Tuple []
    | _ => M.impossible "invalid number of parameters"
    end.
End C.
